--- a/src/components/Catogory.css
+++ b/src/components/Catogory.css
@@ -9,17 +9,36 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 50%;
-    margin-right: 2rem;
+    border-radius: 40%;
+    /* margin-right: 2rem; */
     text-decoration: none;
     /* background: linear-gradient();00 */
     background-color: rgb(29, 33, 32);
     width: 6rem;
     height: 6rem;
     cursor: pointer;
-    transform: scale(0.8);
+    transform: scale(0.6);
 }
 .Navlink h4{
+    color: aliceblue;
+}
+.acti{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40%;
+    /* margin-right: 2rem; */
+    text-decoration: none;
+    /* background: linear-gradient();00 */
+    background-color: rgb(218, 90, 11);
+    width: 6rem;
+    height: 6rem;
+    cursor: pointer;
+    transform: scale(0.6);
+
+}
+.acti h4{
     color: aliceblue;
 }
 svg{
